jdk25: CI·local-package·문서·C stream bench 스택의 JDK 기준을 25로 맞춘다 (감독자)
- 워크플로우 3개 setup-java 25(docs·bindings-release·framework-release)
- scripts/local-package/java/build-wsl.sh: Gradle을 돌리는 JDK가 25 미만이면 중단(toolchain
  자동 다운로드 없음); public-consumer fixture toolchain 25
- bindings 스펙 표 Java 25/JDK 25/Gradle 9.3.0, Java 가이드 요구 JDK 25 + --enable-native-access
  안내(classpath ALL-UNNAMED / module path systems.zlink), VS Code 설정 문서 JDK25_HOME
- bindings/c/bench/with_stream의 JVM 스택 5개 toolchain 25, README·run_benchmarks 안내

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01244XHzDdcR7iXUkQ9oKAbT